Add prettier and eslint

--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "rppd-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@aws-amplify/ui-react": "^3.1.0",
-    "aws-amplify": "^4.3.27",
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2"
-  }
+    "name": "rppd-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@aws-amplify/ui-react": "^3.1.0",
+        "aws-amplify": "^4.3.27",
+        "next": "12.2.2",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
+    },
+    "devDependencies": {
+        "@babel/eslint-parser": "^7.18.9",
+        "eslint": "8.19.0",
+        "eslint-config-next": "12.2.2",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.30.1",
+        "prettier": "^2.7.1"
+    }
 }
