--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.30.1",
-        "prettier": "^2.7.1"
+        "prettier": "^2.7.1",
+        "sass": "^1.53.0"
     }
 }
