--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -59,5 +59,12 @@
         ]
       }
     }
+  },
+  "hosting": {
+    "amplifyhosting": {
+      "service": "amplifyhosting",
+      "type": "cicd",
+      "lastPushTimeStamp": "2022-07-29T16:20:24.207Z"
+    }
   }
 }
