--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "@aws-amplify/ui-react": "^3.1.0",
         "aws-amplify": "^4.3.27",
-        "next": "12.2.2",
+        "next": "^12.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     },
